--- a/Mobiflight-src.cbp
+++ b/Mobiflight-src.cbp
@@ -662,6 +662,7 @@
 			<Add directory="libraries/LiquidCrystal-I2C" />
 			<Add directory="libraries/MF_Modules" />
 			<Add directory="libraries/RotaryEncoder" />
+			<Add directory="libraries/RotaryEncoderShd" />
 			<Add directory="libraries/RotaryEncoderAcelleration" />
 			<Add directory="libraries/TicksPerSecond" />
 			<Add directory="lib_std/Wire" />
@@ -881,7 +882,11 @@
 			<Option target="Simulator - Release" />
 			<Option target="Arduino Mega 2560/ADK" />
 		</Unit>
+		<Unit filename="libraries/RotaryEncoderShd/RotaryEncoderShd.cpp" />
+		<Unit filename="libraries/RotaryEncoderShd/RotaryEncoderShd.h" />
 		<Unit filename="libraries/RotaryEncoder/RotaryEncoder.cpp">
+			<Option compile="0" />
+			<Option link="0" />
 			<Option target="Simulator - Debug" />
 			<Option target="Simulator - Release" />
 			<Option target="Arduino Mega 2560/ADK" />
