pinsRegistered convertito a bitStore; Ora la registrazione dei pin non indica più l'utilizzo, ma solo l'occupazione Creazione classe MFPeripheral come classe base per MFxxxx

--- a/Mobiflight-src.cbp
+++ b/Mobiflight-src.cbp
@@ -848,6 +848,8 @@
 			<Option target="Simulator - Release" />
 			<Option target="Arduino Mega 2560/ADK" />
 		</Unit>
+		<Unit filename="libraries/MF_Modules/MFPeripheral.cpp" />
+		<Unit filename="libraries/MF_Modules/MFPeripheral.h" />
 		<Unit filename="libraries/MF_Modules/MFSegments.cpp">
 			<Option target="Simulator - Debug" />
 			<Option target="Simulator - Release" />
