--- a/Mobiflight-src.cbp
+++ b/Mobiflight-src.cbp
@@ -651,6 +651,7 @@
 			</Target>
 		</Build>
 		<Compiler>
+			<Add option="-Wl,--gc-sections  -Wno-unused-parameter" />
 			<Add option="-DARDUINO_ARCH_AVR" />
 			<Add directory="." />
 			<Add directory="libraries" />
@@ -671,6 +672,9 @@
 			<Add directory="lib_std/Servo" />
 			<Add directory="GCC" />
 		</Compiler>
+		<Linker>
+			<Add option="-Wl,--gc-sections  -Wno-unused-parameter" />
+		</Linker>
 		<Unit filename="GCC/FastArduino.cpp" />
 		<Unit filename="GCC/FastArduino.h" />
 		<Unit filename="GCC/bitStore.cpp" />
@@ -848,6 +852,8 @@
 			<Option target="Simulator - Release" />
 			<Option target="Arduino Mega 2560/ADK" />
 		</Unit>
+		<Unit filename="libraries/MF_Modules/MFOutLEDDM13.cpp" />
+		<Unit filename="libraries/MF_Modules/MFOutLEDDM13.h" />
 		<Unit filename="libraries/MF_Modules/MFOutput.cpp">
 			<Option target="Simulator - Debug" />
 			<Option target="Simulator - Release" />
