--- a/Mobiflight-src.cbp
+++ b/Mobiflight-src.cbp
@@ -507,7 +507,7 @@
 				<Option type="1" />
 				<Option compiler="avrgcc" />
 				<Compiler>
-					<Add option="-O2" />
+					<Add option="-g" />
 					<Add option="-x c++" />
 					<Add option="-mmcu=$(MCU)" />
 					<Add option="-DF_CPU=16000000L" />
